--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -7,5 +7,5 @@
 {% block content %}
   <h1>Logout</h1>
   <h6>Come back soon!</h6>
-  <p><a href="{% url 'logout' %}">Click here</a> if you to go back!</p>
+  <p><a href="{% url 'login' %}">Click here</a> if you to go back!</p>
   {% endblock %}
