--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% load crispy_forms_tags %}
 {% block title %}
     Login
 {% endblock %}
@@ -7,10 +7,12 @@
     
 
 {% block content %}
-  <h1>Login</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Login" class="btn btn-success">
-  </form>
-{% endblock %}
+<div class="container w-50" style="min-width: 300px; max-width: 500px;">
+  <h1n class="m-5 text-center">Login</h1>
+    <form method="post">
+      {% csrf_token %}
+      {{form.as_p}}
+      <input type="submit" value="Login" class="btn btn-success">
+    </form>
+  </div>
+  {% endblock %}
