changes/delete/update

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,6 +12,6 @@ home
 {% endblock css%}
 
 {%block content %}
-<h1>Hello yall I'm using Django</h1>
-<p>This is my first html file using junja tags!</p>
+<h1>Hello yall I'm with Django</h1>
+<p>This is my first html baby yeah!</p>
 {% endblock content%}
