--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 <div class="container">
-  {% for item in list %}
-  <h1>{{ item.title }}</h1>
+  {% for item in post_list %}
+  <h1><a href="{%url 'post_details' post.id %}">{{item.title}}</a></h1>
   <h6>{{ item.author }}</h6>
-  <p>{{ item.status.description }}</p>
+  <p>{{ item.status }}</p>
   <br/>
   {% endfor %}
 </div>
