--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,6 +23,9 @@
           <a class="nav-link" href="{% url 'archived_list' %}">Archived</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'new' %}">Create New Post</a>
+        </li>
+        <li class="nav-item">
           <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
             <input type="submit" value="Logout" class="nav-link active">
