--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -9,11 +9,15 @@
 {% block content %}
 <div class="container">
   {% for item in post_list %}
-  <h1><a href="{%url 'post_details' post.id %}">{{item.title}}</a></h1>
+  <h1><a href="{%url 'post_detail' item.id %}">{{item.title}}</a></h1>
   <h6>{{ item.author }}</h6>
   <p>{{ item.status }}</p>
   <br/>
-  {% endfor %}
+  <br/>
+    <a href="{% url 'post_detail' item.id %}" class="btn btn-danger">Delete</a>
+    <a href="{% url 'post_detail' item.id %}" class="btn btn-primary">Edit</a>
+        
+{% endfor %}
 </div>
   {% endblock %}
   
